--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
 </head>
 <body>
     <h1>Bienvenido</h1>
+    <h2><span>En Mueblerias RR</span> tenemos los mejores productos</h2>
 </body>
 </html>
