--- a/index.html
+++ b/index.html
@@ -1,16 +1,214 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-    <meta charset='utf-8'>
-    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Muebleria</title>
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Distribuidora de muebles</title>
+    <link rel="preload" href="css/normalize.css" as="style">
+    <link rel="stylesheet" href="css/normalize.css">
+    <link href="https://fonts.googleapis.com/css2?family=Krub:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="preload" href="css/main.css" as="style">
+    <link href="css/main.css" rel="stylesheet">
     <script src='main.js'></script>
 </head>
+
 <body>
-    <h1>Bienvenido</h1>
-    <h2><span>En Mueblerias RR</span> tenemos los mejores productos</h2>
-    <h3>Sanata Isabel Tlanepantla,Pue.</h3>
+    <header>
+        <h1 class="titulo"><span>Muebles a</span> precios bajos</h1>
+    </header>
+    <div class="nav-bg">
+        <nav class="panel_navegacion contenedor">
+            <a href="#">Favoritos</a>
+            <a href="#">Registrate</a>
+            <a href="#">Ingresar</a>
+            <a href="#">Mis compras</a>
+        </nav>
+    </div>
+    <section class="hero">
+        <div class="contenido-hero">
+            <h2>
+                <span>Los mejores</span> muebles de la region
+            </h2>
+            <div class="ubicacion">
+                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-map-pin" width="88"
+                    height="88" viewBox="0 0 24 24" stroke-width="1.5" stroke="#FFC107" fill="none"
+                    stroke-linecap="round" stroke-linejoin="round">
+                    <path stroke="none" d="M0 0h24v24H0z" />
+                    <circle cx="12" cy="11" r="3" />
+                    <path d="M17.657 16.657L13.414 20.9a1.998 1.998 0 0 1 -2.827 0l-4.244-4.243a8 8 0 1 1 11.314 0z" />
+                </svg>
+                <p>Santa Isabel Tlanepantla, Puebla</p>
+            </div>
+            <a class="boton" href="#">Contactar</a>
+        </div>
+    </section>
+    <main class="contenedor sombra">
+        <h2>Catalogo</h2>
+        <div class="muebles">
+            <section class="mueble">
+                <h3>
+                    Tocadores
+                </h3>
+                <div class="iconos zoom">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-palette" width="40"
+                        height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="#000000" fill="none"
+                        stroke-linecap="round" stroke-linejoin="round">
+                        <path stroke="none" d="M0 0h24v24H0z" />
+                        <path
+                            d="M12 21a9 9 0 1 1 0 -18a9 8 0 0 1 9 8a4.5 4 0 0 1 -4.5 4h-2.5a2 2 0 0 0 -1 3.75a1.3 1.3 0 0 1 -1 2.25" />
+                        <circle cx="7.5" cy="10.5" r=".5" fill="currentColor" />
+                        <circle cx="12" cy="7.5" r=".5" fill="currentColor" />
+                        <circle cx="16.5" cy="10.5" r=".5" fill="currentColor" />
+                    </svg>
+                </div>
+                <p>Toacdores para decorar tu casa</p>
+            </section>
+
+            <section class="mueble">
+                <h3>
+                    Roperos
+                </h3>
+                <div class="iconos zoom">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-palette" width="40"
+                        height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="#000000" fill="none"
+                        stroke-linecap="round" stroke-linejoin="round">
+                        <path stroke="none" d="M0 0h24v24H0z" />
+                        <path
+                            d="M12 21a9 9 0 1 1 0 -18a9 8 0 0 1 9 8a4.5 4 0 0 1 -4.5 4h-2.5a2 2 0 0 0 -1 3.75a1.3 1.3 0 0 1 -1 2.25" />
+                        <circle cx="7.5" cy="10.5" r=".5" fill="currentColor" />
+                        <circle cx="12" cy="7.5" r=".5" fill="currentColor" />
+                        <circle cx="16.5" cy="10.5" r=".5" fill="currentColor" />
+                    </svg>
+                </div>
+                <p>
+                    Roperos para ordenar todo
+                </p>
+            </section>
+
+            <section class="mueble">
+                <h3>
+                    Camas, bases y buros
+                </h3>
+                <div class="iconos zoom">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-palette" width="40"
+                        height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="#000000" fill="none"
+                        stroke-linecap="round" stroke-linejoin="round">
+                        <path stroke="none" d="M0 0h24v24H0z" />
+                        <path
+                            d="M12 21a9 9 0 1 1 0 -18a9 8 0 0 1 9 8a4.5 4 0 0 1 -4.5 4h-2.5a2 2 0 0 0 -1 3.75a1.3 1.3 0 0 1 -1 2.25" />
+                        <circle cx="7.5" cy="10.5" r=".5" fill="currentColor" />
+                        <circle cx="12" cy="7.5" r=".5" fill="currentColor" />
+                        <circle cx="16.5" cy="10.5" r=".5" fill="currentColor" />
+                    </svg>
+
+                    <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-palette" width="40"
+                        height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="#000000" fill="none"
+                        stroke-linecap="round" stroke-linejoin="round">
+                        <path stroke="none" d="M0 0h24v24H0z" />
+                        <path
+                            d="M12 21a9 9 0 1 1 0 -18a9 8 0 0 1 9 8a4.5 4 0 0 1 -4.5 4h-2.5a2 2 0 0 0 -1 3.75a1.3 1.3 0 0 1 -1 2.25" />
+                        <circle cx="7.5" cy="10.5" r=".5" fill="currentColor" />
+                        <circle cx="12" cy="7.5" r=".5" fill="currentColor" />
+                        <circle cx="16.5" cy="10.5" r=".5" fill="currentColor" />
+                    </svg>
+
+                    <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-palette" width="40"
+                        height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="#000000" fill="none"
+                        stroke-linecap="round" stroke-linejoin="round">
+                        <path stroke="none" d="M0 0h24v24H0z" />
+                        <path
+                            d="M12 21a9 9 0 1 1 0 -18a9 8 0 0 1 9 8a4.5 4 0 0 1 -4.5 4h-2.5a2 2 0 0 0 -1 3.75a1.3 1.3 0 0 1 -1 2.25" />
+                        <circle cx="7.5" cy="10.5" r=".5" fill="currentColor" />
+                        <circle cx="12" cy="7.5" r=".5" fill="currentColor" />
+                        <circle cx="16.5" cy="10.5" r=".5" fill="currentColor" />
+                    </svg>
+                </div>
+                <p>
+                    Bases y cabeceras para dormir, buros para guardar documentos
+                </p>
+            </section>
+
+            <section class="mueble">
+                <h3>
+                    Muebles para sala
+                </h3>
+                <div class="iconos zoom">
+
+                    <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-palette" width="40"
+                        height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="#000000" fill="none"
+                        stroke-linecap="round" stroke-linejoin="round">
+                        <path stroke="none" d="M0 0h24v24H0z" />
+                        <path
+                            d="M12 21a9 9 0 1 1 0 -18a9 8 0 0 1 9 8a4.5 4 0 0 1 -4.5 4h-2.5a2 2 0 0 0 -1 3.75a1.3 1.3 0 0 1 -1 2.25" />
+                        <circle cx="7.5" cy="10.5" r=".5" fill="currentColor" />
+                        <circle cx="12" cy="7.5" r=".5" fill="currentColor" />
+                        <circle cx="16.5" cy="10.5" r=".5" fill="currentColor" />
+                    </svg>
+
+                    <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-palette" width="40"
+                        height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="#000000" fill="none"
+                        stroke-linecap="round" stroke-linejoin="round">
+                        <path stroke="none" d="M0 0h24v24H0z" />
+                        <path
+                            d="M12 21a9 9 0 1 1 0 -18a9 8 0 0 1 9 8a4.5 4 0 0 1 -4.5 4h-2.5a2 2 0 0 0 -1 3.75a1.3 1.3 0 0 1 -1 2.25" />
+                        <circle cx="7.5" cy="10.5" r=".5" fill="currentColor" />
+                        <circle cx="12" cy="7.5" r=".5" fill="currentColor" />
+                        <circle cx="16.5" cy="10.5" r=".5" fill="currentColor" />
+                    </svg>
+
+                    <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-palette" width="40"
+                        height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="#000000" fill="none"
+                        stroke-linecap="round" stroke-linejoin="round">
+                        <path stroke="none" d="M0 0h24v24H0z" />
+                        <path
+                            d="M12 21a9 9 0 1 1 0 -18a9 8 0 0 1 9 8a4.5 4 0 0 1 -4.5 4h-2.5a2 2 0 0 0 -1 3.75a1.3 1.3 0 0 1 -1 2.25" />
+                        <circle cx="7.5" cy="10.5" r=".5" fill="currentColor" />
+                        <circle cx="12" cy="7.5" r=".5" fill="currentColor" />
+                        <circle cx="16.5" cy="10.5" r=".5" fill="currentColor" />
+                    </svg>
+                </div>
+                <p>
+                    Salas comodas a precios comodos
+                </p>
+            </section>
+        </div>
+        <section>
+            <h2>Contactanos</h2>
+            <form class="formulario">
+                <fieldset>
+                    <legend>Contactanos si quieres alguno en especial</legend>
+                    <div class="contenedor-campos">
+                        <div class="campo">
+                            <label>Nombre</label>
+                            <input class="input-text" type="text" placeholder="Tu nombre">
+                        </div>
+
+                        <div class="campo">
+                            <label>Telefono</label>
+                            <input class="input-text" type="number" placeholder="telefono">
+                        </div>
+
+                        <div class="campo">
+                            <label>Correo</label>
+                            <input class="input-text" type="email" placeholder="correo">
+                        </div>
+
+                        <div class="campo">
+                            <label>Mensaje</label>
+                            <textarea class="input-text"></textarea>
+                        </div>
+                    </div>
+                    <div class="alinear-derecha flex">
+                        <input class="boton w-sm-100" type="submit" value="enviar">
+                    </div>
+                </fieldset>
+            </form>
+        </section>
+    </main>
+    <footer>
+        Distrubuidora de muebles Romer's
+    </footer>
 </body>
+
 </html>
