Se eleimino el archivo normalize.css Se agregaron modificaciones en index para una pagina mas completa se modifico el archivo main.css para darle un estilo mejor se agrgaron 2 imagenes en las carpeta img

--- a/index.html
+++ b/index.html
@@ -46,131 +46,140 @@
     <main class="contenedor sombra">
         <h2>Catalogo</h2>
         <div class="muebles">
-            <section class="mueble">
-                <h3>
-                    Tocadores
-                </h3>
-                <div class="iconos zoom">
-                    <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-palette" width="40"
-                        height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="#000000" fill="none"
-                        stroke-linecap="round" stroke-linejoin="round">
-                        <path stroke="none" d="M0 0h24v24H0z" />
-                        <path
-                            d="M12 21a9 9 0 1 1 0 -18a9 8 0 0 1 9 8a4.5 4 0 0 1 -4.5 4h-2.5a2 2 0 0 0 -1 3.75a1.3 1.3 0 0 1 -1 2.25" />
-                        <circle cx="7.5" cy="10.5" r=".5" fill="currentColor" />
-                        <circle cx="12" cy="7.5" r=".5" fill="currentColor" />
-                        <circle cx="16.5" cy="10.5" r=".5" fill="currentColor" />
-                    </svg>
-                </div>
-                <p>Toacdores para decorar tu casa</p>
-            </section>
+            <table class="tabla">
+                <tr>
+                    <td>
+                        <section class="mueble">
+                            <h3>
+                                Tocadores
+                            </h3>
+                            <div class="iconos zoom">
+                                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-palette"
+                                    width="40" height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="#000000"
+                                    fill="none" stroke-linecap="round" stroke-linejoin="round">
+                                    <path stroke="none" d="M0 0h24v24H0z" />
+                                    <path
+                                        d="M12 21a9 9 0 1 1 0 -18a9 8 0 0 1 9 8a4.5 4 0 0 1 -4.5 4h-2.5a2 2 0 0 0 -1 3.75a1.3 1.3 0 0 1 -1 2.25" />
+                                    <circle cx="7.5" cy="10.5" r=".5" fill="currentColor" />
+                                    <circle cx="12" cy="7.5" r=".5" fill="currentColor" />
+                                    <circle cx="16.5" cy="10.5" r=".5" fill="currentColor" />
+                                </svg>
+                            </div>
+                            <p>Toacdores para decorar tu casa</p>
+                        </section>
 
-            <section class="mueble">
-                <h3>
-                    Roperos
-                </h3>
-                <div class="iconos zoom">
-                    <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-palette" width="40"
-                        height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="#000000" fill="none"
-                        stroke-linecap="round" stroke-linejoin="round">
-                        <path stroke="none" d="M0 0h24v24H0z" />
-                        <path
-                            d="M12 21a9 9 0 1 1 0 -18a9 8 0 0 1 9 8a4.5 4 0 0 1 -4.5 4h-2.5a2 2 0 0 0 -1 3.75a1.3 1.3 0 0 1 -1 2.25" />
-                        <circle cx="7.5" cy="10.5" r=".5" fill="currentColor" />
-                        <circle cx="12" cy="7.5" r=".5" fill="currentColor" />
-                        <circle cx="16.5" cy="10.5" r=".5" fill="currentColor" />
-                    </svg>
-                </div>
-                <p>
-                    Roperos para ordenar todo
-                </p>
-            </section>
+                        <section class="mueble">
+                            <h3>
+                                Roperos
+                            </h3>
+                            <div class="iconos zoom">
+                                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-palette"
+                                    width="40" height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="#000000"
+                                    fill="none" stroke-linecap="round" stroke-linejoin="round">
+                                    <path stroke="none" d="M0 0h24v24H0z" />
+                                    <path
+                                        d="M12 21a9 9 0 1 1 0 -18a9 8 0 0 1 9 8a4.5 4 0 0 1 -4.5 4h-2.5a2 2 0 0 0 -1 3.75a1.3 1.3 0 0 1 -1 2.25" />
+                                    <circle cx="7.5" cy="10.5" r=".5" fill="currentColor" />
+                                    <circle cx="12" cy="7.5" r=".5" fill="currentColor" />
+                                    <circle cx="16.5" cy="10.5" r=".5" fill="currentColor" />
+                                </svg>
+                            </div>
+                            <p>
+                                Roperos para ordenar todo
+                            </p>
+                        </section>
+                    </td>
+                    <td>
+                        <section class="mueble">
+                            <h3>
+                                Camas, bases y buros
+                            </h3>
+                            <div class="iconos zoom">
+                                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-bed"
+                                    width="60" height="60" viewBox="0 0 24 24" stroke-width="2" stroke="#000000"
+                                    fill="none" stroke-linecap="round" stroke-linejoin="round">
+                                    <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                                    <path d="M7 9m-2 0a2 2 0 1 0 4 0a2 2 0 1 0 -4 0" />
+                                    <path d="M22 17v-3h-20" />
+                                    <path d="M2 8v9" />
+                                    <path d="M12 14h10v-2a3 3 0 0 0 -3 -3h-7v5z" />
+                                </svg>
 
-            <section class="mueble">
-                <h3>
-                    Camas, bases y buros
-                </h3>
-                <div class="iconos zoom">
-                    <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-palette" width="40"
-                        height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="#000000" fill="none"
-                        stroke-linecap="round" stroke-linejoin="round">
-                        <path stroke="none" d="M0 0h24v24H0z" />
-                        <path
-                            d="M12 21a9 9 0 1 1 0 -18a9 8 0 0 1 9 8a4.5 4 0 0 1 -4.5 4h-2.5a2 2 0 0 0 -1 3.75a1.3 1.3 0 0 1 -1 2.25" />
-                        <circle cx="7.5" cy="10.5" r=".5" fill="currentColor" />
-                        <circle cx="12" cy="7.5" r=".5" fill="currentColor" />
-                        <circle cx="16.5" cy="10.5" r=".5" fill="currentColor" />
-                    </svg>
+                                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-palette"
+                                    width="40" height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="#000000"
+                                    fill="none" stroke-linecap="round" stroke-linejoin="round">
+                                    <path stroke="none" d="M0 0h24v24H0z" />
+                                    <path
+                                        d="M12 21a9 9 0 1 1 0 -18a9 8 0 0 1 9 8a4.5 4 0 0 1 -4.5 4h-2.5a2 2 0 0 0 -1 3.75a1.3 1.3 0 0 1 -1 2.25" />
+                                    <circle cx="7.5" cy="10.5" r=".5" fill="currentColor" />
+                                    <circle cx="12" cy="7.5" r=".5" fill="currentColor" />
+                                    <circle cx="16.5" cy="10.5" r=".5" fill="currentColor" />
+                                </svg>
+                            </div>
+                            <p>
+                                Bases y cabeceras para dormir,<br> buros para guardar documentos
+                            </p>
+                        </section>
 
-                    <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-palette" width="40"
-                        height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="#000000" fill="none"
-                        stroke-linecap="round" stroke-linejoin="round">
-                        <path stroke="none" d="M0 0h24v24H0z" />
-                        <path
-                            d="M12 21a9 9 0 1 1 0 -18a9 8 0 0 1 9 8a4.5 4 0 0 1 -4.5 4h-2.5a2 2 0 0 0 -1 3.75a1.3 1.3 0 0 1 -1 2.25" />
-                        <circle cx="7.5" cy="10.5" r=".5" fill="currentColor" />
-                        <circle cx="12" cy="7.5" r=".5" fill="currentColor" />
-                        <circle cx="16.5" cy="10.5" r=".5" fill="currentColor" />
-                    </svg>
+                        <section class="mueble">
+                            <h3>
+                                Muebles para sala
+                            </h3>
+                            <div class="iconos zoom">
 
-                    <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-palette" width="40"
-                        height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="#000000" fill="none"
-                        stroke-linecap="round" stroke-linejoin="round">
-                        <path stroke="none" d="M0 0h24v24H0z" />
-                        <path
-                            d="M12 21a9 9 0 1 1 0 -18a9 8 0 0 1 9 8a4.5 4 0 0 1 -4.5 4h-2.5a2 2 0 0 0 -1 3.75a1.3 1.3 0 0 1 -1 2.25" />
-                        <circle cx="7.5" cy="10.5" r=".5" fill="currentColor" />
-                        <circle cx="12" cy="7.5" r=".5" fill="currentColor" />
-                        <circle cx="16.5" cy="10.5" r=".5" fill="currentColor" />
-                    </svg>
-                </div>
-                <p>
-                    Bases y cabeceras para dormir, buros para guardar documentos
-                </p>
-            </section>
+                                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-sofa"
+                                    width="60" height="60" viewBox="0 0 24 24" stroke-width="2" stroke="#000000"
+                                    fill="none" stroke-linecap="round" stroke-linejoin="round">
+                                    <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                                    <path
+                                        d="M4 11a2 2 0 0 1 2 2v1h12v-1a2 2 0 1 1 4 0v5a1 1 0 0 1 -1 1h-18a1 1 0 0 1 -1 -1v-5a2 2 0 0 1 2 -2z" />
+                                    <path d="M4 11v-3a3 3 0 0 1 3 -3h10a3 3 0 0 1 3 3v3" />
+                                    <path d="M12 5v9" />
+                                </svg>
 
-            <section class="mueble">
-                <h3>
-                    Muebles para sala
-                </h3>
-                <div class="iconos zoom">
+                                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-desk"
+                                    width="60" height="60" viewBox="0 0 24 24" stroke-width="2" stroke="#000000"
+                                    fill="none" stroke-linecap="round" stroke-linejoin="round">
+                                    <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                                    <path d="M3 6h18" />
+                                    <path d="M4 6v13" />
+                                    <path d="M20 19v-13" />
+                                    <path d="M4 10h16" />
+                                    <path d="M15 6v8a2 2 0 0 0 2 2h3" />
+                                </svg>
 
-                    <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-palette" width="40"
-                        height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="#000000" fill="none"
-                        stroke-linecap="round" stroke-linejoin="round">
-                        <path stroke="none" d="M0 0h24v24H0z" />
-                        <path
-                            d="M12 21a9 9 0 1 1 0 -18a9 8 0 0 1 9 8a4.5 4 0 0 1 -4.5 4h-2.5a2 2 0 0 0 -1 3.75a1.3 1.3 0 0 1 -1 2.25" />
-                        <circle cx="7.5" cy="10.5" r=".5" fill="currentColor" />
-                        <circle cx="12" cy="7.5" r=".5" fill="currentColor" />
-                        <circle cx="16.5" cy="10.5" r=".5" fill="currentColor" />
-                    </svg>
-
-                    <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-palette" width="40"
-                        height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="#000000" fill="none"
-                        stroke-linecap="round" stroke-linejoin="round">
-                        <path stroke="none" d="M0 0h24v24H0z" />
-                        <path
-                            d="M12 21a9 9 0 1 1 0 -18a9 8 0 0 1 9 8a4.5 4 0 0 1 -4.5 4h-2.5a2 2 0 0 0 -1 3.75a1.3 1.3 0 0 1 -1 2.25" />
-                        <circle cx="7.5" cy="10.5" r=".5" fill="currentColor" />
-                        <circle cx="12" cy="7.5" r=".5" fill="currentColor" />
-                        <circle cx="16.5" cy="10.5" r=".5" fill="currentColor" />
-                    </svg>
-
-                    <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-palette" width="40"
-                        height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="#000000" fill="none"
-                        stroke-linecap="round" stroke-linejoin="round">
-                        <path stroke="none" d="M0 0h24v24H0z" />
-                        <path
-                            d="M12 21a9 9 0 1 1 0 -18a9 8 0 0 1 9 8a4.5 4 0 0 1 -4.5 4h-2.5a2 2 0 0 0 -1 3.75a1.3 1.3 0 0 1 -1 2.25" />
-                        <circle cx="7.5" cy="10.5" r=".5" fill="currentColor" />
-                        <circle cx="12" cy="7.5" r=".5" fill="currentColor" />
-                        <circle cx="16.5" cy="10.5" r=".5" fill="currentColor" />
-                    </svg>
-                </div>
-                <p>
-                    Salas comodas a precios comodos
-                </p>
+                                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-palette"
+                                    width="40" height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="#000000"
+                                    fill="none" stroke-linecap="round" stroke-linejoin="round">
+                                    <path stroke="none" d="M0 0h24v24H0z" />
+                                    <path
+                                        d="M12 21a9 9 0 1 1 0 -18a9 8 0 0 1 9 8a4.5 4 0 0 1 -4.5 4h-2.5a2 2 0 0 0 -1 3.75a1.3 1.3 0 0 1 -1 2.25" />
+                                    <circle cx="7.5" cy="10.5" r=".5" fill="currentColor" />
+                                    <circle cx="12" cy="7.5" r=".5" fill="currentColor" />
+                                    <circle cx="16.5" cy="10.5" r=".5" fill="currentColor" />
+                                </svg>
+                            </div>
+                            <p>
+                                Salas comodas a precios comodos
+                            </p>
+                        </section>
+                    </td>
+                </tr>
+            </table>
+        </div>
+        <div class="vistaRapida">
+            <section>
+                <img src="img/CajoneraBlanca.jpg">
+                <img src="img/FotosMuebles/Coredizo ancho.jpg" id="imagenRedireccionCorredizo" onclick="redireccionCorredizo()">
+                <img src="img/FotosMuebles/CoredizoBlanco.jpg">
+                <img src="img/FotosMuebles/CoredizoNegro.jpg">
+                <img src="img/FotosMuebles/EspejoHoliwooCajonera.jpg">
+                <img src="img/FotosMuebles/Imagen de WhatsApp 2023-08-30 a las 10.59.05.jpg">
+                <img src="img/FotosMuebles/MesitaDeCentro.jpg">
+                <img src="img/FotosMuebles/muebleDeTele.jpg">
+                <img src="img/FotosMuebles/TocadorBDNCSF.jpg">
+                <img src="img/FotosMuebles/TocadorBDNCYNF.jpg">
+                <img src="img/FotosMuebles/BuroBlancoConTactoPiel.jpg">
             </section>
         </div>
         <section>
