modificamos la linea 31 del index

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <section class="hero">
         <div class="contenido-hero">
             <h2>
-                <span>Los mejores</span> muebles de la region
+                Los mejores muebles de la region
             </h2>
             <div class="ubicacion">
                 <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-map-pin" width="88"
