--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Krub:wght@400;700&display=swap" rel="stylesheet">
     <link rel="preload" href="css/main.css" as="style">
     <link href="css/main.css" rel="stylesheet">
-    <script src='main.js'></script>
 </head>
 
 <body>
@@ -19,10 +18,10 @@
     </header>
     <div class="nav-bg">
         <nav class="panel_navegacion contenedor">
-            <a href="#">Favoritos</a>
+            <a href="Favoritos.html">Favoritos</a>
             <a href="#">Registrate</a>
             <a href="#">Ingresar</a>
-            <a href="#">Mis compras</a>
+            <a href="Carrito/index.html">Mi Carrito</a>
         </nav>
     </div>
     <section class="hero">
@@ -49,24 +48,26 @@
             <table class="tabla">
                 <tr>
                     <td>
-                        <section class="mueble">
-                            <h3>
-                                Tocadores
-                            </h3>
-                            <div class="iconos zoom">
-                                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-palette"
-                                    width="40" height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="#000000"
-                                    fill="none" stroke-linecap="round" stroke-linejoin="round">
-                                    <path stroke="none" d="M0 0h24v24H0z" />
-                                    <path
-                                        d="M12 21a9 9 0 1 1 0 -18a9 8 0 0 1 9 8a4.5 4 0 0 1 -4.5 4h-2.5a2 2 0 0 0 -1 3.75a1.3 1.3 0 0 1 -1 2.25" />
-                                    <circle cx="7.5" cy="10.5" r=".5" fill="currentColor" />
-                                    <circle cx="12" cy="7.5" r=".5" fill="currentColor" />
-                                    <circle cx="16.5" cy="10.5" r=".5" fill="currentColor" />
-                                </svg>
-                            </div>
-                            <p>Toacdores para decorar tu casa</p>
-                        </section>
+                        <a href="Menu/Tocadores/index.html">
+                            <section class="mueble">
+                                <h3>
+                                    Tocadores
+                                </h3>
+                                <div class="iconos zoom">
+                                    <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-palette"
+                                        width="40" height="40" viewBox="0 0 24 24" stroke-width="1.5" stroke="#000000"
+                                        fill="none" stroke-linecap="round" stroke-linejoin="round">
+                                        <path stroke="none" d="M0 0h24v24H0z" />
+                                        <path
+                                            d="M12 21a9 9 0 1 1 0 -18a9 8 0 0 1 9 8a4.5 4 0 0 1 -4.5 4h-2.5a2 2 0 0 0 -1 3.75a1.3 1.3 0 0 1 -1 2.25" />
+                                        <circle cx="7.5" cy="10.5" r=".5" fill="currentColor" />
+                                        <circle cx="12" cy="7.5" r=".5" fill="currentColor" />
+                                        <circle cx="16.5" cy="10.5" r=".5" fill="currentColor" />
+                                    </svg>
+                                </div>
+                                <p>Toacdores para decorar tu casa</p>
+                            </section>
+                        </a>
 
                         <section class="mueble">
                             <h3>
@@ -167,45 +168,31 @@
                 </tr>
             </table>
         </div>
-        <div class="vistaRapida">
-            <section>
-                <img src="img/CajoneraBlanca.jpg">
-                <img src="img/FotosMuebles/Coredizo ancho.jpg" id="imagenRedireccionCorredizo" onclick="redireccionCorredizo()">
-                <img src="img/FotosMuebles/CoredizoBlanco.jpg">
-                <img src="img/FotosMuebles/CoredizoNegro.jpg">
-                <img src="img/FotosMuebles/EspejoHoliwooCajonera.jpg">
-                <img src="img/FotosMuebles/Imagen de WhatsApp 2023-08-30 a las 10.59.05.jpg">
-                <img src="img/FotosMuebles/MesitaDeCentro.jpg">
-                <img src="img/FotosMuebles/muebleDeTele.jpg">
-                <img src="img/FotosMuebles/TocadorBDNCSF.jpg">
-                <img src="img/FotosMuebles/TocadorBDNCYNF.jpg">
-                <img src="img/FotosMuebles/BuroBlancoConTactoPiel.jpg">
-            </section>
-        </div>
         <section>
             <h2>Contactanos</h2>
-            <form class="formulario">
+            <form class="formulario" action="Favoritos.html" method="post" id="formulario">
                 <fieldset>
                     <legend>Contactanos si quieres alguno en especial</legend>
                     <div class="contenedor-campos">
                         <div class="campo">
-                            <label>Nombre</label>
-                            <input class="input-text" type="text" placeholder="Tu nombre">
+                            <label for="nombre">Nombre</label>
+                            <input class="input-text" type="text" placeholder="Tu nombre" id="nombre" name="nombre">
                         </div>
 
                         <div class="campo">
-                            <label>Telefono</label>
-                            <input class="input-text" type="number" placeholder="telefono">
+                            <label for="telefono">Telefono</label>
+                            <input class="input-text" type="number" placeholder="telefono" id="telefono"
+                                name="telefono">
                         </div>
 
                         <div class="campo">
-                            <label>Correo</label>
-                            <input class="input-text" type="email" placeholder="correo">
+                            <label for="correo">Correo</label>
+                            <input class="input-text" type="email" placeholder="correo" id="correo" name="correo">
                         </div>
 
                         <div class="campo">
-                            <label>Mensaje</label>
-                            <textarea class="input-text"></textarea>
+                            <label for="mensajeTA">Mensaje</label>
+                            <textarea class="input-text" id="mensajeTA" name="mensajeTA"></textarea>
                         </div>
                     </div>
                     <div class="alinear-derecha flex">
@@ -215,6 +202,7 @@
             </form>
         </section>
     </main>
+    <script src='JS/index.js'></script>
     <footer>
         Distrubuidora de muebles Romer's
     </footer>
