se agrego un registro un login la pagina principal de tocadores y una pestaña topcador a demas del carrito de compras

--- a/Menu/Tocadores/index.html
+++ b/Menu/Tocadores/index.html
@@ -10,19 +10,353 @@
 </head>
 
 <body>
-    <div class="producto">
-        <div class="contendorImg">
-            <img src="../../img/CajoneraBlanca.jpg" alt="Cajonera Blanca">
-            <p>Cajonera</p>
-            <p>$1400</p>
-            <button onclick="EnviarAlCarrito('Cajonera Blanca',1400,1,'../../img/CajoneraBlanca.jpg',1);">Agregar Al
-                Carrito</button>
-        </div>
-    </div>
-    <script src='../../JS/enviando.js'></script>
-    <div id="newScript">
-        <script src="../../JS/carrito.js"></script>
-    </div>
-</body>
+
+    <body>
+        <h1 id="titulo" class="titulo">
+            Selecciona tu producto favorito
+        </h1>
+        <main>
+            <div>
+                <table>
+                    <tr>
+                        <td>
+                            <a href="tocadorVertical/index.html">
+                                <div class="contedor-global">
+                                    <div class="recomendacion-imagen-tama">
+                                        <img class="zoom" src="../../img/TocadorBDNCSF.jpg">
+                                    </div>
+                                    <div id="contenedor">
+                                        <div style="font-size: 20px;" class="recomendacion-signo">
+                                            $
+                                        </div>
+                                        <div style="font-size: 24;">
+                                            3500
+                                        </div>
+                                        <br>
+                                        <div>
+                                            Tocador Corredizo Tipo Holiwoo
+                                        </div>
+                                        <br>
+                                        <div style="font-size: 12;">
+                                            Tocador Coredizo vertical con 4 cajones y dos repisas y 4 dentro del espejo
+                                        </div>
+                                    </div>
+                                </div>
+                            </a>
+                        </td>
+                        <td>
+                            <a href="tocadorVertical/index.html">
+                                <div class="contedor-global">
+                                    <div class="recomendacion-imagen-tama">
+                                        <img class="zoom" src="Fotos/EspejoHoliwooCajonera.png">
+                                    </div>
+                                    <div id="contenedor">
+                                        <div style="font-size: 20px;" class="recomendacion-signo">
+                                            $
+                                        </div>
+                                        <div style="font-size: 24;">
+                                            3500
+                                        </div>
+                                        <br>
+                                        <div>
+                                            Espejo Holiwoo con torres de cajon
+                                        </div>
+                                        <br>
+                                        <div style="font-size: 12;">
+                                            Espejo Holiwoo con torres de 3 cajones a los lados
+                                        </div>
+                                    </div>
+                                </div>
+                            </a>
+                        </td>
+                        <td>
+                            <a href="">
+                                <div class="contedor-global">
+                                    <div class="recomendacion-imagen-tama">
+                                        <img class="zoom" src="Fotos/Imagen de WhatsApp 2023-08-30 a las 10.59.05.jpg">
+                                    </div>
+                                    <div id="contenedor">
+                                        <div style="font-size: 20px;" class="recomendacion-signo">
+                                            $
+                                        </div>
+                                        <div style="font-size: 24;">
+                                            3000
+                                        </div>
+                                        <br>
+                                        <div>
+                                            Tocador Jamp
+                                        </div>
+                                        <br>
+                                        <div style="font-size: 12;">
+                                            Tocador Jamp con 4 cajones y una lampara ademas puerta con tacto piel
+                                        </div>
+                                    </div>
+                                </div>
+                            </a>
+                        </td>
+                        <td>
+                            <a href="">
+                                <div class="contedor-global">
+                                    <div class="recomendacion-imagen-tama">
+                                        <img class="zoom" src="Fotos/TocadorBDNCSF.jpg">
+                                    </div>
+                                    <div id="contenedor">
+                                        <div style="font-size: 20px;" class="recomendacion-signo">
+                                            $
+                                        </div>
+                                        <div style="font-size: 24;">
+                                            3000
+                                        </div>
+                                        <br>
+                                        <div>
+                                            Tocador de 9 cajones con 7 focos
+                                        </div>
+                                        <br>
+                                        <div style="font-size: 12;">
+                                            Tocador con 7 cajones cuadrados y una luna
+                                        </div>
+                                    </div>
+                                </div>
+                            </a>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <a href="">
+                                <div class="contedor-global">
+                                    <div class="recomendacion-imagen-tama">
+                                        <img class="zoom" src="Fotos/TocadorBDNCYNF.jpg">
+                                    </div>
+                                    <div id="contenedor">
+                                        <div style="font-size: 20px;" class="recomendacion-signo">
+                                            $
+                                        </div>
+                                        <div style="font-size: 24;">
+                                            3500
+                                        </div>
+                                        <br>
+                                        <div>
+                                            Tocador de 9 cajones con 9 focos
+                                        </div>
+                                        <br>
+                                        <div style="font-size: 12;">
+                                            Tocador de 7 cajones y 9 focos con luna completa
+                                        </div>
+                                    </div>
+                                </div>
+                            </a>
+                        </td>
+                        <td>
+                            <a href="">
+                                <div class="contedor-global">
+                                    <div class="recomendacion-imagen-tama">
+                                        <img class="zoom" src="Fotos/TocadorBDTCCONLAMPARAS.jpg">
+                                    </div>
+                                    <div id="contenedor">
+                                        <div style="font-size: 20px;" class="recomendacion-signo">
+                                            $
+                                        </div>
+                                        <div style="font-size: 24;">
+                                            3500
+                                        </div>
+                                        <br>
+                                        <div>
+                                            Tocador tres cajones con lamparas
+                                        </div>
+                                        <br>
+                                        <div style="font-size: 12;">
+                                            Tocador de tres cajones y dos puertas con 7 lamparas
+                                        </div>
+                                    </div>
+                                </div>
+                            </a>
+                        </td>
+                        <td>
+                            <a href="">
+                                <div class="contedor-global">
+                                    <div class="recomendacion-imagen-tama">
+                                        <img class="zoom" src="Fotos/TocadorBRCTCVYL.jpg">
+                                    </div>
+                                    <div id="contenedor">
+                                        <div style="font-size: 20px;" class="recomendacion-signo">
+                                            $
+                                        </div>
+                                        <div style="font-size: 24;">
+                                            3500
+                                        </div>
+                                        <br>
+                                        <div>
+                                            Tocador de Tres cajones Y lampara
+                                        </div>
+                                        <br>
+                                        <div style="font-size: 12;">
+                                            Tocador con tres cajones y puertas con tacto piel y una lampara
+                                        </div>
+                                    </div>
+                                </div>
+                            </a>
+                        </td>
+                        <td>
+                            <a href="">
+                                <div class="contedor-global">
+                                    <div class="recomendacion-imagen-tama">
+                                        <img class="zoom" src="Fotos/TocadorCorredizoConUnaLamoaraCC.jpg">
+                                    </div>
+                                    <div id="contenedor">
+                                        <div style="font-size: 20px;" class="recomendacion-signo">
+                                            $
+                                        </div>
+                                        <div style="font-size: 24;">
+                                            3500
+                                        </div>
+                                        <br>
+                                        <div>
+                                            Tocador Coredizo Con Lampara
+                                        </div>
+                                        <br>
+                                        <div style="font-size: 12;">
+                                            Tocador con cuatro cajones Corredizo con 3 repizas
+                                        </div>
+                                    </div>
+                                </div>
+                            </a>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <a href="">
+                                <div class="contedor-global">
+                                    <div class="recomendacion-imagen-tama">
+                                        <img class="zoom" src="Fotos/TocadorCorredizoDeCuatroCajonesDosPuertas.jpg">
+                                    </div>
+                                    <div id="contenedor">
+                                        <div style="font-size: 20px;" class="recomendacion-signo">
+                                            $
+                                        </div>
+                                        <div style="font-size: 24;">
+                                            3200
+                                        </div>
+                                        <br>
+                                        <div>
+                                            Tocador Corredizo FT
+                                        </div>
+                                        <br>
+                                        <div style="font-size: 12;">
+                                            Tocador con cuatro cajones y dos puertas espejo Corredizo
+                                        </div>
+                                    </div>
+                                </div>
+                            </a>
+                        </td>
+                        <td>
+                            <a href="">
+                                <div class="contedor-global">
+                                    <div class="recomendacion-imagen-tama">
+                                        <img class="zoom" src="Fotos/TocadorDeSieteFocosTresCajonesCR.jpg">
+                                    </div>
+                                    <div id="contenedor">
+                                        <div style="font-size: 20px;" class="recomendacion-signo">
+                                            $
+                                        </div>
+                                        <div style="font-size: 24;">
+                                            3200
+                                        </div>
+                                        <br>
+                                        <div>
+                                            Tocador De FSTT
+                                        </div>
+                                        <br>
+                                        <div style="font-size: 12;">
+                                            Tocador con cuatro repizas a cada lado y siete focos ademas de tres cajones
+                                            y 2 puertas
+                                        </div>
+                                    </div>
+                                </div>
+                            </a>
+                        </td>
+                        <td>
+                            <a href="">
+                                <div class="contedor-global">
+                                    <div class="recomendacion-imagen-tama">
+                                        <img class="zoom" src="Fotos/TocadorDeTresCajonesYDosPuertasConLampara.jpg">
+                                    </div>
+                                    <div id="contenedor">
+                                        <div style="font-size: 20px;" class="recomendacion-signo">
+                                            $
+                                        </div>
+                                        <div style="font-size: 24;">
+                                            3200
+                                        </div>
+                                        <br>
+                                        <div>
+                                            Tocador De THCL
+                                        </div>
+                                        <br>
+                                        <div style="font-size: 12;">
+                                            Tocador con Repisas tres cajones verticales, dos puertas ademas de una
+                                            lamapara
+                                        </div>
+                                    </div>
+                                </div>
+                            </a>
+                        </td>
+                        <td>
+                            <a href="">
+                                <div class="contedor-global">
+                                    <div class="recomendacion-imagen-tama">
+                                        <img class="zoom" src="Fotos/TocadorDeUnCajonOchoFocos.jpg">
+                                    </div>
+                                    <div id="contenedor">
+                                        <div style="font-size: 20px;" class="recomendacion-signo">
+                                            $
+                                        </div>
+                                        <div style="font-size: 24;">
+                                            3200
+                                        </div>
+                                        <br>
+                                        <div>
+                                            Tocador De OE
+                                        </div>
+                                        <br>
+                                        <div style="font-size: 12;">
+                                            Tocador con un cajon GRANDE y ocho focos
+                                        </div>
+                                    </div>
+                                </div>
+                            </a>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <a href="">
+                                <div class="contedor-global">
+                                    <div class="recomendacion-imagen-tama">
+                                        <img class="zoom" src="Fotos/TocadorManicurista.jpg">
+                                    </div>
+                                    <div id="contenedor">
+                                        <div style="font-size: 20px;" class="recomendacion-signo">
+                                            $
+                                        </div>
+                                        <div style="font-size: 24;">
+                                            3200
+                                        </div>
+                                        <br>
+                                        <div>
+                                            Tocador Manicurista
+                                        </div>
+                                        <br>
+                                        <div style="font-size: 12;">
+                                            Tocador para manicuristas exelente con 5 cajones y un espacio con cristal
+                                            para ver las manos
+                                        </div>
+                                    </div>
+                                </div>
+                            </a>
+                        </td>
+                    </tr>
+                </table>
+            </div>
+        </main>
+    </body>
 
 </html>
