--- a/Carrito/index.html
+++ b/Carrito/index.html
@@ -7,7 +7,6 @@
     <title>Mi Carrito</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='../css/carrito.css'>
-
 </head>
 
 <body>
@@ -21,12 +20,14 @@
                 <img src="../img/CajoneraBlanca.jpg" alt="Cajonera Blanca">
                 <p>Cajonera</p>
                 <p>$1400</p>
-                <button onclick="agregarAlCarrito('Cajonera Blanca',1400,1,'../img/CajoneraBlanca.jpg',1);">Agregar Al Carrito</button>
-            </div>  
+                <button onclick="agregarAlCarrito('Cajonera Blanca', 1400, 1, '../img/CajoneraBlanca.jpg', 1);">
+                    Agregar Al Carrito
+                </button>
+            </div>
         </div>
     </div>
-    <script src='../JS/carrito.js'></script>
-    <script src="../JS/enviando.js"></script>
+    <script src='carritojs.js'></script>
+
 </body>
 
 </html>
