se modifico mainIndex.css, tocadorCorredizo.css y index.html

--- a/index.html
+++ b/index.html
@@ -102,7 +102,6 @@
                                             <path d="M2 8v9" />
                                             <path d="M12 14h10v-2a3 3 0 0 0 -3 -3h-7v5z" />
                                         </svg>
-
                                         <svg xmlns="http://www.w3.org/2000/svg"
                                             class="icon icon-tabler icon-tabler-palette" width="40" height="40"
                                             viewBox="0 0 24 24" stroke-width="1.5" stroke="#000000" fill="none"
@@ -116,7 +115,7 @@
                                         </svg>
                                     </div>
                                     <p>
-                                        Bases y cabeceras para dormir,<br> buros para guardar documentos
+                                        Bases<br>y cabeceras para dormir,<br> buros para guardar documentos
                                     </p>
                                 </section>
                             </a>
@@ -165,7 +164,7 @@
                                         </svg>
                                     </div>
                                     <p>
-                                        Salas comodas a precios comodos
+                                        Salas comodas<br>a precios comodos
                                     </p>
                                 </section>
                             </a>
