--- a/Registro/registro.html
+++ b/Registro/registro.html
@@ -25,8 +25,8 @@
             <input type="text" id="telefono" name="telefono" required>
         </div>
         <div>
-            <label for="email">Email:</label>
-            <input type="email" id="email" name="email" required>
+            <label for="correo">Email:</label>
+            <input type="email" id="correo" name="correo" required>
         </div>
         <div>
             <label for="contrasena">Contraseña:</label>
@@ -36,7 +36,7 @@
             <button type="submit">Registrarse</button>
         </div>
     </form>
-
+    <div id="status"></div>
     <script src="../js/registro.js"></script>
 </body>
 </html>
