--- a/Registro/registro.html
+++ b/Registro/registro.html
@@ -13,8 +13,20 @@
             <input type="text" id="nombre" name="nombre" required>
         </div>
         <div>
-            <label for="email">Email:</label>
-            <input type="email" id="email" name="email" required>
+            <label for="appat">Primer Apellido:</label>
+            <input type="text" id="appat" name="appat" required>
+        </div>
+        <div>
+            <label for="apmat">Segundo Apellido:</label>
+            <input type="text" id="apmat" name="apmat" required>
+        </div>
+        <div>
+            <label for="telefono">Telefono:</label>
+            <input type="text" id="telefono" name="telefono" required>
+        </div>
+        <div>
+            <label for="correo">Email:</label>
+            <input type="email" id="correo" name="correo" required>
         </div>
         <div>
             <label for="contrasena">Contraseña:</label>
@@ -25,34 +37,6 @@
         </div>
     </form>
 
-    <script>
-        // Aquí puedes agregar tu script de JavaScript para manejar el registro de usuario
-        document.getElementById("registroForm").addEventListener("submit", function(event) {
-            event.preventDefault(); // Evita que el formulario se envíe automáticamente
-
-            // Aquí puedes obtener los valores del formulario
-            const nombre = document.getElementById("nombre").value;
-            const email = document.getElementById("email").value;
-            const contrasena = document.getElementById("contrasena").value;
-
-            // Aquí puedes realizar la lógica para enviar los datos a un servidor o almacenarlos localmente
-            console.log("Nombre:", nombre);
-            console.log("Email:", email);
-            console.log("Contraseña:", contrasena);
-
-            // Aquí podrías enviar los datos a un servidor utilizando fetch o XMLHttpRequest
-            // fetch('url_del_servidor', {
-            //     method: 'POST',
-            //     body: JSON.stringify({ nombre, email, contrasena }),
-            //     headers: {
-            //         'Content-Type': 'application/json'
-            //     }
-            // }).then(response => {
-            //     // Manejar la respuesta del servidor
-            // }).catch(error => {
-            //     console.error('Error al enviar los datos:', error);
-            // });
-        });
-    </script>
+    <script src="../js/registro.js"></script>
 </body>
 </html>
