--- a/Registro/registro.html
+++ b/Registro/registro.html
@@ -36,7 +36,7 @@
             <button type="submit">Registrarse</button>
         </div>
     </form>
-
+    <div id="status"></div>
     <script src="../js/registro.js"></script>
 </body>
 </html>
